# akira_sales

./: .gitignore  .pre-commit-config.yaml  CONSTANTS_GUIDE.md  Dockerfile  README.md  REFACTORING_EXAMPLE.md  docker-compose.yml  main.py  pyproject.toml  startup.sh
.github/workflows/: azure-webapp.yml
_archive/dbc/services/: save_data.py
_archive/etl/: clean_sales.py
_archive/functions/: df_helpers.py
_archive/old_etl/: identify_products.py  treat_sales_sheet.py
_archive/st_web/services/: save_data.py
_archive/test_etl/: a. Treat Sales Sheet.ipynb
_archive/unfinished/: products_settings.py
app/: Home.py  Upload de Arquivos.py  main.py
app/assets/dataframes/: other_costs_placeholder.csv  products_costs_placeholder.csv
app/assets/texts/: job_execution.md  products_costs.md  sales_uploader.md
app/components/: costs_uploader.py  general.py  header.py  jobs_execution.py  sales_uploader.py
azure_functions/: .env.example  function_app.py  pyproject.toml  requirements.txt  test.py
azure_functions/features/: monthly_executions.py  monthly_pipeline.py
azure_functions/src/etl/: month_closing.py
azure_functions/src/services/: ADLSClient.py  check_data.py  read_data.py  save_data.py  test.ipynb  treat_data.py
azure_functions/src/utils/: constants.py  helpers.py
dashboards/: Relatório de Vendas - Akira.pbix  Relatório de Vendas.pbix
docs/: directories.md
etl/: clean_sales.py  identify_products.py  treat_sales_sheet.py
notebooks/: BS_treat_sales_sheet.ipynb  GG_identify_products.ipynb  SG_clean_sales.ipynb  SG_identify_products.ipynb  a. Treat Sales Sheet.ipynb  b. Clean Sales.ipynb  bronze_silver.ipynb  c. Identify Products.ipynb  silver_gold.ipynb
notebooks/includes/: config.ipynb
pbi/mock/: mocking.ipynb
src/akira/: utils.py
src/dbc/functions/: df_helpers.py
src/etl/: monthly_data_treatment.py
src/functions/: df_helpers.py
src/services/: ADLSClient.py  check_data.py  jobs.py  read_data.ipynb  read_data.py  save_data.ipynb  save_data.py  treat_data.py
src/utils/: constants.py  df_helpers.py  helpers.py
streamlit/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
streamlit/app/: Home.py  Uploads.py
streamlit/test/: test.py  testing.ipynb
test/etl/: c. Identify Products.ipynb
(+33 files in other folders)
