[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.1.4",
    "pywin32>=306; sys_platform == 'win32'",
    "openpyxl>=3.1.0",
    "pathlib>=1.0.1",
    "streamlit>=1.52.1",
    "pillow>=12.0.0",
    "future>=1.0.0",
    "git-filter-repo>=2.47.0",
    "azure-storage-file-datalake>=12.22.0",
    "azure-identity>=1.25.1",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "unidecode>=1.4.0",
]
[tool.setuptools.packages.find]
where = ["src"]
