[project]
name = "akira-azure-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "azure-identity>=1.25.3",
    "azure-storage-file-datalake>=12.23.0",
    "dotenv>=0.9.9",
    "fastparquet>=2026.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "unidecode>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
